<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileViewFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253" />

    <Button
        android:id="@+id/button_add_profile_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@color/bordeaux_medium"
        android:fontFamily="@font/helvetica_rounded_bold"
        android:text="@string/add_profile_photo"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/image_view_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_view_profile"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/edit_text_first_name"
        android:layout_width="131dp"
        android:layout_height="44dp"
        android:background="@drawable/rounded_corner"
        android:clickable="false"
        android:fontFamily="@font/helvetica"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColorHint="#887D7D"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_profile"
        app:layout_constraintVertical_bias="0.123" />


    <EditText
        android:id="@+id/edit_text_last_name"
        android:layout_width="131dp"
        android:layout_height="44dp"
        android:background="@drawable/rounded_corner"
        android:clickable="false"
        android:fontFamily="@font/helvetica"
        android:gravity="center"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColorHint="#887D7D"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toEndOf="@+id/edit_text_first_name"
        app:layout_constraintTop_toTopOf="@+id/edit_text_first_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:layout_marginBottom="268dp"
        android:background="@drawable/rounded_corner"
        android:clickable="false"
        android:fontFamily="@font/helvetica"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColorHint="#887D7D"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_last_name"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="@+id/edit_text_first_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_first_name"
        app:layout_constraintVertical_bias="0.361" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:layout_marginBottom="216dp"
        android:background="@drawable/rounded_corner"
        android:clickable="false"
        android:fontFamily="@font/helvetica"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#887D7D"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_phone"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_phone"
        app:layout_constraintVertical_bias="0.368" />

</androidx.constraintlayout.widget.ConstraintLayout>